src/css/App.css
body {
    background-color: black;
    overflow-x: hidden;
    overflow-y: hidden;
}

.left-padding{
    padding-left: 15px;
}

.event-text {
    font-size: 14px;
}

.text {
    color: white;
}

.box {
    height: 150px;
}

.event-box{
    height: 96px;
}

.day-box{
    height: 150px;
    width: 150px;
}

.day-button{
    background: transparent;
    border: none !important;
    cursor: pointer;
}

.day-item{
    
}

